# WSURover

./: README.md
autonomous_pkg/: CMakeLists.txt  package.xml
autonomous_pkg/src/: camera_input.cpp  camera_interface.cpp  detect_markers.cpp
interface_pkg/: CMakeLists.txt  package.xml
interface_pkg/src/: gamepad_interface.cpp
pwm_pca9685/: CMakeLists.txt
pwm_pca9685_0/: CMakeLists.txt  package.xml
rover_pkg/: CMakeLists.txt  NODE TEMPLATE  package.xml  sensor_read.py
rover_pkg/archive/: PWM_interface.py  can_interface.py  gui_node_kv.py
rover_pkg/archive/PWM_interface/: PWM_interface.ino
rover_pkg/archive/gui_recources/: rover_gui.kv
rover_pkg/launch/: rover_teleop.launch
rover_pkg/msg/: ArmData.msg  CameraControlData.msg  FastAnalogData.msg  RockerBogieData.msg  RoverStateData.msg  SlowAnalogData.msg  ToolData.msg  UserInput.msg
rover_pkg/src/: advanced_arm_control_interface.py  basic_arm_control_interface.py  camera1.py  camera2.py  camera_gui_node.py  gui_node.py  joy.py  joystick_interface.py  rocker_bogie_control_interface.py  rover_control_interface.py  sensor_input.py  threekin.py  tool_control_interface.py  twokin.py  user_input_keyboard.py  videoreturn.py
rover_pkg/src/Experimental/: 2spacecontrol.py  GPIO_node.py  advanced_arm_control_interface (copy).py  armcontrol.py  camera_control_interface.py  joystick.py
rover_pkg/src/basic_controller/: basic_controller.ino
rover_pkg/src/i2ctest/: i2ctest.ino
rover_pkg/src/video_things/: camera1.py  camera2.py
scripts/: detect_markers  detect_markers.cpp  exp.sh  interface.sh  interface2.sh
(+6 files in other folders)
